[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jobpulse"
version = "0.1.0"
description = "Self-hosted job search dashboard built on jobhive ATS scrapers"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "aiohttp>=3.9",
    "beautifulsoup4>=4.12",
    "html2text>=2024.0",
    "httpcloak>=1.6",
    "pandas>=2.0",
    "jobhive-py[scrapers]",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["jobpulse"]

[tool.uv.sources]
jobhive-py = { path = "vendor/jobhive", editable = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]
